hphp/test/zend/good/zend/bug43027.php
<?php
declare(ticks=1);
namespace test;
echo "ok\n";
?>