hphp/test/zend/bad/Zend/tests/declare_004.php
<?php

declare(encoding = 1);
declare(encoding = 1123131232131312321);
declare(encoding = NULL);
declare(encoding = M_PI);

print 'DONE';

?>